--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,8 +24,23 @@
   color: white;
 }
 
+.App-header-light {
+  background-color: white;
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: #282c34;
+}
+
 .App-link {
   color: #61dafb;
+  background: transparent;
+  border: 0;
+  font-size: 30px;
+  font-weight: 600;
 }
 
 @keyframes App-logo-spin {
